--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     
 </head>
 <body>
     <!--header-->
-    <header class="header-content">
+    <header class="header-content container">
         <nav>
             <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
             <ul class="header-menu">
@@ -38,7 +39,7 @@
                 <button class="button" type="button">Заказать услугу </button> 
         </section>
         <!--spacial-->
-        <section class="spacials">
+        <section class="spacials container section">
             <!--Скрытая сторка-->
             <h2 class="spacial-slogan">Наши приемущества</h2>
             <ul>
@@ -57,7 +58,7 @@
             </ul>
         </section>
         <!--main-things-->
-        <section class="main-thing">    
+        <section class="main-thing container section">    
             <h2 class="main-header">Чем мы занимаемся</h2>
             <ul class="photo">
                 <li class="photo-item">
@@ -73,7 +74,7 @@
 
         </section>
        <!--team-->
-        <section class="main-team">    
+        <section class="main-team section container">    
             <h2 class="main-header">Наша команда</h2>
                 <ul class="photo-team">
                     <li class="team-item">
@@ -101,7 +102,7 @@
         </section>
         <!--footer-->
     <footer class="bottom" id="contacts">
-        <div class="container-footer">
+        <div class="container">
                     <a class="logo" href="/"><span>Web</span>Studio</a>
                 <address>
                     <ul class="adress">
