--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <!---->
 <body>
-    <header class="header-content">
+    <header class="header-content container">
         <nav>
             <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
             <ul class="header-menu">
@@ -30,7 +31,7 @@
     </header>
 <!--main-->
     <main>
-        <section class="list-button">
+        <section class="list-button section">
             <ul class="buttons">
                 <li class="button-item">
                 <button class="button-project btn-active" type="button">Все</button></li>
@@ -45,11 +46,11 @@
             </ul>
         </section>
    <!--main-saction-->
-        <section class="portfolio-class">  
+        <section class="portfolio-class section">  
             <!--hidden-->  
             <h2 class="spacial-slogan">Наши работы</h2>
 
-            <ul class="portfolio-photo">
+            <ul class="portfolio-photo container">
                 <li class="portfolio-team">
                     <img class="portfolio-item" src="./images/image9.jpg" width="370" alt="thing">
                     <h3  class="team-heading">Технокряк</h3>
@@ -99,9 +100,9 @@
             </ul>
 
         </section>
-    </main>
+    </main>7
     <footer class="bottom" id="contacts">
-        <div class="container-footer">
+        <div class="container">
                     <a class="logo" href="/"><span>Web</span>Studio</a>
                 <address>
                     <ul class="adress">
