--- a/index.html
+++ b/index.html
@@ -74,31 +74,33 @@
 
         </section>
        <!--team-->
-        <section class="main-team section container">    
-            <h2 class="main-header">Наша команда</h2>
-                <ul class="photo-team">
-                    <li class="team-item">
-                        <img class="team" src="./images/image5.jpg" width="270" height="260" alt="Фотографмя Игорь Демьяненко">
-                        <h3 class="team-item-header">Игорь Демьяненко</h3>
-                        <p class="taam-item-text">Product Designer</p>
-                    </li>
-                    
-                    <li class="team-item">
-                        <img class="team" src="./images/image6.jpg" width="270" height="260" alt="Фотография Ольга Репина">
-                        <h3 class="team-item-header">Ольга Репина</h3>
-                        <p class="taam-item-text">Frontend Developer</p>
-                    </li>
-                     <li class="team-item">
-                        <img class="team" src="./images/image8.jpg" width="270" height="260"  alt="Фотография Николай Тарасов">
-                        <h3  class="team-item-header">Николай Тарасов</h3>
-                        <p class="taam-item-text">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team" src="./images/image7.jpg" width="270" height="260"  alt="Фотография Михаил Ермаков">
-                        <h3  class="team-item-header">Михаил Ермаков</h3>
-                        <p class="taam-item-text">UI Designer</p>
-                    </li>
-                </ul>
+        <section class="main-team section">    
+            <div class="container">
+                <h2 class="main-header">Наша команда</h2>
+                    <ul class="photo-team">
+                        <li class="team-item">
+                            <img class="team" src="./images/image5.jpg" width="270" height="260" alt="Фотографмя Игорь Демьяненко">
+                            <h3 class="team-item-header">Игорь Демьяненко</h3>
+                            <p class="taam-item-text">Product Designer</p>
+                        </li>
+                        
+                        <li class="team-item">
+                            <img class="team" src="./images/image6.jpg" width="270" height="260" alt="Фотография Ольга Репина">
+                            <h3 class="team-item-header">Ольга Репина</h3>
+                            <p class="taam-item-text">Frontend Developer</p>
+                        </li>
+                        <li class="team-item">
+                            <img class="team" src="./images/image8.jpg" width="270" height="260"  alt="Фотография Николай Тарасов">
+                            <h3  class="team-item-header">Николай Тарасов</h3>
+                            <p class="taam-item-text">Marketing</p>
+                        </li>
+                        <li class="team-item">
+                            <img class="team" src="./images/image7.jpg" width="270" height="260"  alt="Фотография Михаил Ермаков">
+                            <h3  class="team-item-header">Михаил Ермаков</h3>
+                            <p class="taam-item-text">UI Designer</p>
+                        </li>
+                    </ul>
+            </div>
         </section>
         <!--footer-->
     <footer class="bottom" id="contacts">
