--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 </head>
 <body>
     <!--header-->
-    <header class="header-content container">
-        <nav>
-            <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
-            <ul class="header-menu">
-                <li><a class="link-active" href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="/">Контакты</a></li>
+    <header class="header-content">
+        <div class="container flexbox">
+            <nav>
+                <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+                <ul class="header-menu">
+                    <li><a class="link-active" href="./index.html">Студия</a></li>
+                    <li><a href="./portfolio.html">Портфолио</a></li>
+                    <li><a href="/">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="header-contacts">
+                <li>
+                <a class="header-email-contact" href="mailto:ingo@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="header-phone" href="tel:380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="header-contacts">
-            <li>
-            <a class="header-email-contact" href="mailto:ingo@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-phone" href="tel:380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
         
     </header>
     <!--main-->
