--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
             </div>
 
         </section>
-    </main>7
+    </main>
     <footer class="bottom" id="contacts">
         <div class="container">
                     <a class="logo" href="/"><span>Web</span>Studio</a>
